@@ -48,6 +48,10 @@ Malathi, Vladimir Avdonin and Eric Le Lay for contributing to this release.
 }}}
 {{{ API Changes
 
+- New method IOUtilities.closeQuietly(ObjectInput) (Matthieu Casanova)
+
+- New method IOUtilities.closeQuietly(ObjectOutput) (Matthieu Casanova)
+
 - New method MiscUtilities.openInDesktop() [5.0pre2] (Alan Ezust)
 
 - New method GUIUtilities.setAutoMnemonic(AbstractButton) (Jarek Czekalski)
